# pur

./: .clang-format  CMakeLists.txt  README.md  run.sh  vcpkg.json
src/: Actor.cpp  Actor.hpp  CollisionSystem.cpp  CollisionSystem.hpp  Color.cpp  Color.hpp  Config.cpp  Config.hpp  Game.cpp  Game.hpp  IDrawable.hpp  Object.hpp  Randomizer.cpp  Randomizer.hpp  Target.cpp  Target.hpp  Window.cpp  Window.hpp  main.cpp
